--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- header start -->
     <header>
         <nav>
-            <h3 class="nav-title">G3 Architects</h3>
+            <h3 class="section-title">G3 Architects</h3>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
@@ -54,6 +54,16 @@
 
             </div>
         </section>
+
+        <!-- features section start -->
+        <sec class="features">
+
+        </sec>
+        <!-- facts section -->
+        <sec class="facts">
+            <h3 class="section-title">Some Facts</h3>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        </sec>
 
     </main>
     <footer>
